Ajout de la metadescription

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- Meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+    content="Regardez des films et des séries Screenflix en ligne, sur votre smart TV, Playstation, Xbox, PC, Mac, smartphone, tablette et bien plus." />
 
     <!-- Link -->
     <link rel="stylesheet" href="assets/css/style.css" />
