--- a/en.html
+++ b/en.html
@@ -6,6 +6,8 @@
     <!-- Meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Watch Screenflix, movies, TV shows online or stream right to your smart TV, playstation, xbox, PC, Mac, mobile, tablet and more." />
 
     <!-- Link -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -64,10 +66,12 @@
             </div>
 
             <div class="text-white absolute w-full md:inset-y-1/3 inset-y-1/4">
-                <h1 class="text-center font-bold md:text-6xl text-3xl my-3 md:w-2/5 mx-auto md:px-0 px-6">Unlimited movies, TV shows,
+                <h1 class="text-center font-bold md:text-6xl text-3xl my-3 md:w-2/5 mx-auto md:px-0 px-6">Unlimited
+                    movies, TV shows,
                     and more.</h1>
                 <p class="text-center font-bold md:text-2xl text-xl my-3">Watch anywhere. Cancel anytime.</p>
-                <p class="text-center font-bold md:text-2xl text-lg md:px-0 px-6">Ready to watch? Enter your email to create or
+                <p class="text-center font-bold md:text-2xl text-lg md:px-0 px-6">Ready to watch? Enter your email to
+                    create or
                     restart your membership.</p>
                 <div class="flex flex-col justify-center sm:flex-row items-center mt-6 space-y-4 sm:space-y-0">
                     <div class="relative md:h-20 h-12 md:w-4/12 w-10/12">
@@ -193,7 +197,8 @@
                                 class="block px-2.5 pb-2.5 pt-5 h-full w-full text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-white appearance-none focus:outline-none peer"
                                 placeholder=" " />
                             <label for="register2"
-                                class="absolute text-sm md:text-lg text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 md:top-5 z-10 origin-[0] left-5 md:peer-focus:font-bold peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4">Email adress</label>
+                                class="absolute text-sm md:text-lg text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 md:top-5 z-10 origin-[0] left-5 md:peer-focus:font-bold peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4">Email
+                                adress</label>
                         </div>
                         <button
                             class="border border-red-600 bg-red-600 px-6 md:px-0 font-bold md:text-2xl md:h-16 h-10 md:rounded-none md:w-4/12">
