--- a/en/login.html
+++ b/en/login.html
@@ -6,6 +6,8 @@
     <!-- Meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Watch Screenflix, movies, TV shows online or stream right to your smart TV, playstation, xbox, PC, Mac, mobile, tablet and more." />
 
     <!-- Link -->
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -122,7 +124,7 @@
                         <a class="dropdown-item text-sm font-normal block w-full whitespace-nowrap bg-transparent  text-white hover:bg-blue-500 px-10"
                             href="../connexion.html">Français</a>
                     </li>
-                  
+
                 </ul>
             </div>
 
